A program that accepts an integer that indicates how many numbers in an array. The user is prompted to enter the numbers to be stored in the array. The difference between the largest and smallest number in the array is returned to the user.

--- a/DifferenceOfNumbers/DifferenceOfNumbers/DifferenceOfNumbers.csproj
+++ b/DifferenceOfNumbers/DifferenceOfNumbers/DifferenceOfNumbers.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{0F39D792-2E50-4202-8078-A9AAAEB158B7}</ProjectGuid>
+    <ProjectGuid>{A9BC7FC5-1551-4F29-A3FD-44DA8BBD7AEF}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>TicTacToeGame</RootNamespace>
-    <AssemblyName>TicTacToeGame</AssemblyName>
+    <RootNamespace>DifferenceOfNumbers</RootNamespace>
+    <AssemblyName>DifferenceOfNumbers</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -41,7 +41,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="InitialBoard.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
