Edited StartGame constructor.

--- a/BoardGame/BoardGame/BoardGame.csproj
+++ b/BoardGame/BoardGame/BoardGame.csproj
@@ -41,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeReview.cs" />
     <Compile Include="DrawBoard.cs" />
+    <Compile Include="NewGame.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
